--- a/Report/report.tex
+++ b/Report/report.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt]{article}
 
 \usepackage[letterpaper,left=1in,right=1in,top=1in,bottom=1in]{geometry}
-
+\usepackage{float}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 
@@ -226,7 +226,23 @@ The Python Standard Library ElementTree XML API was utilized to parse the dictio
 
 \section{Results}
 \subsection{Supervised WSD}
-TODO
+\begin{table}[H]
+    \begin{tabular}{|l|l|}
+    \hline
+    Features                                                                        & ~       \\ \hline
+    target word probability + unigram(window size 5) + stoplist                     & 0.81266 \\ \hline
+    target word probability + unigram(window size 5)                                & 0.80704 \\ \hline
+    target word probability + unigram(window size 5) no validation set              & 0.80449 \\ \hline
+    target word probability + unigram(window size 5) with synsets no validation set & 0.80424 \\ \hline
+    target word probability + unigram(window size 10) no validation set             & 0.80092 \\ \hline
+    unigram(window size 10)                                                         & 0.79888 \\ \hline
+    unigram(window size 5)                                                          & 0.79735 \\ \hline
+    most common sense baseline                                                      & 0.78076 \\ \hline
+    random baseline                                                                 & 0.33     \\ \hline
+    \end{tabular}
+\end{table}
+
+Here we present the results of a few of our trials sorted in decreasing order of efficiency based on the kaggle test set. We have two baselines which were guessing a random sense which scored approximately .33. Surprisingly, just guessing the most common sense is enough to get a score of .78076. We then created our naive bayes classifier by adding on features incrementally. 
 
 \subsection{Dictionary WSD}
 TODO
