--- a/Report/report.tex
+++ b/Report/report.tex
@@ -263,7 +263,50 @@ Here we present the results of a few of our trials sorted in decreasing order of
 \includegraphics[width = 4in]{data_plot.png}
 
 \subsection{Dictionary WSD}
-TODO
+During the development of the dictionary WSD process, several optional parameters were introduced. Tuning these parameters significantly affected the accuracy of the process. These parameters include the threshold for feature selection, the application of lemmatization on all tokens and averaging overlap scores based on the size of the target sense signature.
+
+As mentioned previously, feature selection is accomplished by assigning IDF weights to context tokens for a test case. Tokens are then filtered by comparing their weights to a threshold. Table~\ref{threshold} shows the accuracies of the dictionary WSD system with various thresholds. Since the inverse document frequency statistic increases with the approximated importance of the word, a higher threshold would result in more important features. However, higher threshold values also result in less features to be compared against. Through experimentation the threshold of $6.0$ was determined to result in the highest accuracy, without resulting in no features being selected at all.
+
+\begin{table}[ht]
+    \centering
+    \begin{tabular}{|l|l|}
+    \hline
+    Threshold                          & Accuracy   \\ \hline
+    0.0 & 0.196 \\
+    2.0        & 0.20 \\
+    6.0                   & 0.29 \\ \hline
+    \end{tabular}
+\caption{Accuracy based on feature selection threshold, with averaging and no lemmatization}
+\label{threshold}
+\end{table}
+
+Lemmatization was also incorporated into the process, in theory, to reduce false negatives in calculating overlaps, due to morphological variations in words. Table~\ref{lemmatization} shows that lemmatization increased the accuracy of the system, albeit not significantly. 
+
+\begin{table}[ht]
+    \centering
+    \begin{tabular}{|l|l|}
+    \hline
+    Lemmatization?                          & Accuracy   \\ \hline
+    No & 0.29 \\
+    Yes        & 0.32 \\ \hline
+    \end{tabular}
+\caption{Accuracy based on lemmatization, with a threshold of 6.0 and averaging}
+\label{lemmatization}
+\end{table}
+
+The final parameter that was introduced was an attempt at normalizing scores based on the size of the target sense signature. In theory, if one sense had significantly more examples than another sense, that would result in more overlaps. Scores for each sense were averaged by the number of tokens in the sense's signature. Table~\ref{averaging} shows that averaging actually decreased the accuracy of the system.
+
+\begin{table}[ht]
+    \centering
+    \begin{tabular}{|l|l|}
+    \hline
+    Averaging?                          & Accuracy   \\ \hline
+    No & 0.32 \\
+    Yes        & 0.36 \\ \hline
+    \end{tabular}
+\caption{Accuracy based on sense score averaging, with a threshold of 6.0 and lemmatization}
+\label{averaging}
+\end{table}
 
 \section{Discussion}
 \subsection{Supervised WSD}
