--- a/Report/report.tex
+++ b/Report/report.tex
@@ -237,80 +237,27 @@ The Python Standard Library ElementTree XML API was utilized to parse the dictio
     target word probability + unigram(window size 5) with synsets no validation set & 0.80424 \\ \hline
     target word probability + unigram(window size 10) no validation set             & 0.80092 \\ \hline
     unigram(window size 10)                                                         & 0.79888 \\ \hline
+    unigram(window size 5) -does not differentiate before and after contexts                                                        & 0.79837 \\ \hline
     unigram(window size 5)                                                          & 0.79735 \\ \hline
     most common sense baseline                                                      & 0.78076 \\ \hline
     random baseline                                                                 & 0.33     \\ \hline
     \end{tabular}
 \end{table}
 
-Here we present the results of a few of our trials sorted in decreasing order of efficiency based on the kaggle test set. We have two baselines which were guessing a random sense which scored approximately .33. Surprisingly, just guessing the most common sense is enough to get a score of .78076. We then created our naive bayes classifier by adding on features incrementally. 
-
-\subsubsection{Feature Selection}
-\begin{center}
-\begin{table}
-    \begin{tabular}{|l|l|}
-    \hline
-    Submission                          & Score   \\ \hline
-    Used a stop list to select features & 0.81266 \\
-    Used features with idf > 2.0        & 0.80704 \\
-    Used all features                   & 0.80704 \\
-    Most common senses(baseline)        & 0.78076 \\ \hline
-    \end{tabular}
-\end{table}
-\end{center}
+Here we present the results of a few of our trials sorted in decreasing order of efficiency based on the kaggle test set. We have two baselines which were guessing a random sense which scored approximately .33. Surprisingly, just guessing the most common sense is enough to get a score of .78076. We then created our naive bayes classifier by adding on features incrementally. The first feature we tried was unigrams around the target word, but we did not differentiate between previous and after contexts. We then proceeded to differentiate between the two contexts, added the target word probabilities, and incorporated a stop list and the validation set into our classification.
 
 \subsubsection{Extension 4}
 \includegraphics[width = 4in]{data_plot.png}
 
+In the above graph, accuracy is on the left and the bottom represents the training set size = 1/log(x+1) of the original size.
+Above is a graph of soft scores versus hard scores given different sized training sets. The way we chose the training set was by simply choosing every other line in the training set in order to reduce the size of the training set in half at each step. You can see above that there is a clear downward trend as the training set decreases in size though there are some outliers where accuracy actually improved for the hard score. It seems that the soft score is more telling of the actual accuracy of the model since it has a continually decreasing learning curve as the size of the test set decreases.
+
 \subsection{Dictionary WSD}
-During the development of the dictionary WSD process, several optional parameters were introduced. Tuning these parameters significantly affected the accuracy of the process. These parameters include the threshold for feature selection, the application of lemmatization on all tokens and averaging overlap scores based on the size of the target sense signature.
-
-As mentioned previously, feature selection is accomplished by assigning IDF weights to context tokens for a test case. Tokens are then filtered by comparing their weights to a threshold. Table~\ref{threshold} shows the accuracies of the dictionary WSD system with various thresholds. Since the inverse document frequency statistic increases with the approximated importance of the word, a higher threshold would result in more important features. However, higher threshold values also result in less features to be compared against. Through experimentation the threshold of $6.0$ was determined to result in the highest accuracy, without resulting in no features being selected at all.
-
-\begin{table}[ht]
-    \centering
-    \begin{tabular}{|l|l|}
-    \hline
-    Threshold                          & Accuracy   \\ \hline
-    0.0 & 0.196 \\
-    2.0        & 0.20 \\
-    6.0                   & 0.29 \\ \hline
-    \end{tabular}
-\caption{Accuracy based on feature selection threshold, with averaging and no lemmatization}
-\label{threshold}
-\end{table}
-
-Lemmatization was also incorporated into the process, in theory, to reduce false negatives in calculating overlaps, due to morphological variations in words. Table~\ref{lemmatization} shows that lemmatization increased the accuracy of the system, albeit not significantly. 
-
-\begin{table}[ht]
-    \centering
-    \begin{tabular}{|l|l|}
-    \hline
-    Lemmatization?                          & Accuracy   \\ \hline
-    No & 0.29 \\
-    Yes        & 0.32 \\ \hline
-    \end{tabular}
-\caption{Accuracy based on lemmatization, with a threshold of 6.0 and averaging}
-\label{lemmatization}
-\end{table}
-
-The final parameter that was introduced was an attempt at normalizing scores based on the size of the target sense signature. In theory, if one sense had significantly more examples than another sense, that would result in more overlaps. Scores for each sense were averaged by the number of tokens in the sense's signature. Table~\ref{averaging} shows that averaging actually decreased the accuracy of the system.
-
-\begin{table}[ht]
-    \centering
-    \begin{tabular}{|l|l|}
-    \hline
-    Averaging?                          & Accuracy   \\ \hline
-    No & 0.32 \\
-    Yes        & 0.36 \\ \hline
-    \end{tabular}
-\caption{Accuracy based on sense score averaging, with a threshold of 6.0 and lemmatization}
-\label{averaging}
-\end{table}
+TODO
 
 \section{Discussion}
 \subsection{Supervised WSD}
-TODO
+
 
 \subsection{Dictionary WSD}
 TODO
